# ESCS

./: .envrc  .gitignore  README.md  car.ino  mise.toml  pyproject.toml
firmware/: README.md  firmware.ino
tests/: test_controller.py  test_gesture_controller.py
tools/: README.md  __init__.py  controller.py  gesture_controller.py
