[project]
name = "gcsc"
version = "0.1.0"
description = "WIP"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pyserial>=3.5",
]

[tool.uv.workspace]
members = ["."]

[project.scripts]
gcsc-controller = "tools.controller:main"

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tools*"]
